[package]
name = "steel-pty"
version = "0.1.0"
edition = "2021"

[lib]
name = "steel_pty"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
alacritty_terminal = "0.26.0"
futures = "0.3.32"
futures-time = "3.1.0"
parking_lot = "0.12.5"
rustix = { version = "1.1.4", features = ["process"] }
steel-core = { version = "0.8.2", features = ["dylibs", "sync"] }
tokio = { version = "1.52.3", features = ["sync"]}
